ordering and checking

--- a/STSEval/app/static/app/content/site.css
+++ b/STSEval/app/static/app/content/site.css
@@ -411,3 +411,11 @@ input[type="checkbox"].input-validation-error {
     color: black;
     font-weight: 700;
 }
+
+.ath-list{
+    cursor:pointer
+}
+
+.setup-box{
+    height:240px;
+}
