--- a/STSEval/management/templates/management/setup_cameras.html
+++ b/STSEval/management/templates/management/setup_cameras.html
@@ -22,7 +22,7 @@
                     </div>
                 </div>
             </div>
-		    <div id="divCameraList" class="listbox mb-2" style="width:600px;height:180px;"></div>
+		    <div id="divCameraList" class="listbox mb-2 setup-box" style="width:600px;"></div>
 		    <div id="divCameraButtonsArea">
 		        <button href="#" id="btnCameraAdd"   type="button" class="btn btn-main management-button"  data-toggle="modal" data-target="#modalMain" onclick="AddCameraStart()">Add</button>
 		        <button href="#" id="btnCameraEdit"  type="button" class="btn btn-main management-button ui-disabled" data-toggle="modal" data-target="#modalMain" onclick="EditCameraStart()">Edit</button>
