--- a/STSEval/management/templates/management/athlete_list.html
+++ b/STSEval/management/templates/management/athlete_list.html
@@ -1,6 +1,6 @@
 {% block content %}
     {% for athlete in athletes %}
-        <div id="divAthlete{{athlete.id}}" onclick="AthleteClick({{athlete.id}});"class="row no-gutters ath-list">
+        <div id="divAthlete{{athlete.id}}" onclick="AthleteClick({{athlete.id}});" athid="{{athlete.id}}" class="row no-gutters ath-list sortable">
             <div class="col-2 pl-2" align="left">{{athlete.team.abbreviation}}</div>
             <div class="col-2" align="center">{{athlete.level}}</div>
             <div class="col-6" align="center">{{athlete.name}}</div>
