--- a/STSEval/management/templates/management/setup_competition.html
+++ b/STSEval/management/templates/management/setup_competition.html
@@ -64,7 +64,7 @@
 
     function btnAdministrateClick() {
         if (SelectedSession != -1) {
-            window.location = "/administrator/" + SelectedSession;
+            window.location = "/overview/" + SelectedSession;
         }
     }
 
