--- a/STSEval/app/templates/app/layout.html
+++ b/STSEval/app/templates/app/layout.html
@@ -103,6 +103,26 @@
     </div>
   </div>
 </div>
+
+
+<div class="modal fade" id="modalSecond" tabindex="-1" role="dialog" aria-labelledby="modalSecondTitle" aria-hidden="true">
+  <div id="modalSecondDoc" class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header" style="padding-top:0;padding-bottom:0">
+          <div class="w-100" align="center">
+        <h5 class="modal-title" id="modalSecondTitle"></h5>
+              </div>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="margin-left:inherit">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id="modalSecondBody">
+          <div id="modalSecondArea1"></div>
+      </div>
+    </div>
+  </div>
+</div>
+
     <script src="{% static 'app/scripts/jquery-1.10.2.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="{% static 'app/scripts/bootstrap.js' %}"></script>
