sponsor block image > 4mb

--- a/STSEval/management/templates/management/sponsor_form.html
+++ b/STSEval/management/templates/management/sponsor_form.html
@@ -18,12 +18,16 @@
         <div class="row">
             <div class="col-12" align="center">
                 IMAGE<br/>
-                396 x 288 pixels minimum<br/>
+                396 x 288 pixels minimum, size < 4 MB<br/>
                 {{ form.image }}<br/>
                 {{form.image.errors}}
             </div>   
         </div>
-
+        <div id="divErrors">
+            {% for err in form.non_field_errors %}
+                <div class="errorlist">{{ err }}</div>
+            {% endfor %}
+        </div>
         <br/>
         <input type="hidden" id="id" name="id" value="{{id}}" />
         <input type="submit" href="#" id="btnSponsorFinish" class="btn btn-main" value="Save">
