login multi judge setup

--- a/STSEval/account/templates/account/login.html
+++ b/STSEval/account/templates/account/login.html
@@ -19,6 +19,9 @@
                     </div>
             </div>
           {% endfor %}
+       {% if err is not '' %}
+                <div style="color: red">{{ err }}</div>
+            {% endif %}
           <button type="submit" class="btn btn-main mt-2">Login</button><br/><br/>
       
       No Account? <a href="/account/signup/">Sign Up</a><br/>
