--- a/STSEval/app/templates/app/ejudge_select.html
+++ b/STSEval/app/templates/app/ejudge_select.html
@@ -1,5 +1,4 @@
-﻿{% extends "app/layout.html" %}
-
+{% extends "app/layout.html" %}
 {% block content %}
 {% load staticfiles %}
 <div align="center">
